--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,13 @@
 Flask==2.3.3
-Flask-SQLAlchemy==3.0.5
+Flask-SQLAlchemy==3.1.1
 Flask-Login==0.6.2
-Flask-WTF==1.1.1
-Flask-Migrate==4.0.4
+Flask-Migrate==4.0.5
 Flask-SocketIO==5.3.6
-python-socketio==5.10.0
-eventlet==0.33.3
-google-auth-oauthlib==1.0.0
-google-auth-httplib2==0.1.0
-google-api-python-client==2.97.0
 python-dotenv==1.0.0
-SQLAlchemy==2.0.20
 Werkzeug==2.3.7
-pytz==2023.3
-gunicorn
+SQLAlchemy==2.0.21
+Pillow==10.0.0
+google-auth-oauthlib==1.1.0
+google-auth==2.23.0
+google-auth-httplib2==0.1.1
+google-api-python-client==2.99.0 
