--- a/vercel.json
+++ b/vercel.json
@@ -2,18 +2,17 @@
     "version": 2,
     "builds": [
         {
-            "src": "run.py",
+            "src": "app/__init__.py",
             "use": "@vercel/python"
         }
     ],
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "run.py"
+            "dest": "app/__init__.py"
         }
     ],
     "env": {
-        "FLASK_APP": "run.py",
-        "FLASK_ENV": "production"
+        "PYTHONPATH": "."
     }
 }
