--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,4 @@ python-dotenv==1.0.0
 Werkzeug==2.3.7
 SQLAlchemy==2.0.21
 Pillow==10.0.0
-google-auth-oauthlib==1.1.0
-google-auth==2.23.0
-google-auth-httplib2==0.1.1
-google-api-python-client==2.99.0 
+simple-websocket==0.10.1 
